...
        bodyView
            .navigationTitle(MeliConstants.Strings.productDetail)
            .navigationBarTitleDisplayMode(.inline)
            .navigationBar(.yellow)
            .sheet(isPresented: $showShareSheet) {
                ShareSheet(items: [viewModel.product.permalink])
                    .accessibilityIdentifier("shareProductView")
            }
            .onChange(of: viewModel.error) { _, error in
                if error != .none {
                    toastManager.showToast(message: error.errorDescription,
                                           fixed: true) {
                        viewModel.tryAgain()
...
                    favoritesProductsViewModel.updateFavorite(product: viewModel.product)
                }
                Spacer()
                ShareButton() {
                    showShareSheet.toggle()
                }
                .accessibilityIdentifier("shareButtonProductDetailView")
            }
            .font(.system(size: MeliConstants.Values.value14))
        }
    }
}

...
